# xx3

./: .gitignore  .gitmodules  CMakeLists.txt
examples/window/: CMakeLists.txt
examples/window/src/: game.cpp  game.h  monster.cpp  monster.h  pch.h  snake.cpp  snake.h
include/: xx.h  xx.natvis  xx_affine.h  xx_blocklink.h  xx_bmfont.h  xx_box2d.h  xx_camera.h  xx_data.h  xx_data_ex.h  xx_dataitems.h  xx_embeds.h  xx_file.h  xx_frame.h  xx_framebuffer.h  xx_gamebase.h  xx_gl.h  xx_glfw.h  xx_grid2d.h  xx_grid2d_aabb.h  xx_grid2d_circle.h  xx_grid2daabb.h  xx_includes.h  xx_input.h  xx_list.h  xx_lmdb.h  xx_math.h  xx_node.h  xx_prim.h  xx_prims.h  xx_ptr.h  xx_queue.h  xx_rectpacker.h  xx_rnd.h  xx_scenebase.h  xx_scissor.h  xx_shader.h  xx_shader_quad.h  xx_shader_quad_light.h  xx_shader_spine.h  xx_shader_spine38.h  (+27 more)
src/: xx.cpp  xx_affine.cpp  xx_bmfont.cpp  xx_camera.cpp  xx_data.cpp  xx_embeds.cpp  xx_file.cpp  xx_frame.cpp  xx_framebuffer.cpp  xx_gamebase.cpp  xx_gl.cpp  xx_grid2daabb.cpp  xx_input.cpp  xx_lmdb.cpp  xx_math.cpp  xx_node.cpp  xx_rectpacker.cpp  xx_rnd.cpp  xx_scissor.cpp  xx_shaders.cpp  xx_shaker.cpp  xx_sound.cpp  xx_space_.cpp  xx_spine.cpp  xx_spine38.cpp  xx_stbimage.cpp  xx_string.cpp  xx_time.cpp  xx_ui_background.cpp  xx_ui_button.cpp  xx_ui_checkbox.cpp  xx_ui_dropdownlist.cpp  xx_ui_image.cpp  xx_ui_imagebutton.cpp  xx_ui_imagelabelbutton.cpp  xx_ui_label.cpp  xx_ui_labelbutton.cpp  xx_ui_layouter.cpp  xx_ui_scale9.cpp  xx_ui_scrollview.cpp  (+1 more)
